Fix overflowing spinner when loading history

--- a/customize.dist/src/less2/include/toolbar-history.less
+++ b/customize.dist/src/less2/include/toolbar-history.less
@@ -22,6 +22,11 @@
             font: @colortheme_app-font;
         }
 
+        &.cp-history-init {
+            padding: 0;
+            height: 32px;
+        }
+
         .cp-toolbar-history-timeline {
             display: flex;
             flex-flow: column;
